--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "jest --coverage --verbose"
+    "test": "jest --coverage --verbose",
+    "lint": "eslint '**/*.js'"
   },
   "repository": {
     "type": "git",
@@ -18,15 +19,17 @@
     "url": "https://github.com/IbrahimAbuawad/api-server/issues"
   },
   "homepage": "https://github.com/IbrahimAbuawad/api-server#readme",
-  "dependencies": {
+  "devDependencies": {
     "@code-fellows/supergoose": "^1.1.0",
+    "eslint": "^7.29.0",
+    "jest": "^27.0.6",
+    "supergoose": "^0.2.6"
+  },
+  "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.0"
-  },
-  "devDependencies": {
-    "jest": "^27.0.6",
-    "supergoose": "^0.2.6"
+    "mongoose": "^5.13.0",
+    "morgan": "^1.10.0"
   }
 }
